# d3census

./: .gitignore  README.md  pyproject.toml  src.py
d3census/: __init__.py  edition.py  profile.py  receiving.py  reference.py  requestmanager.py  variable.py
d3census/geography/: B01001.py  B02015.py  B03001.py  B08101.py  B17001.py  B19061.py  C17002.py  C17024.py  __init__.py  tablereference.py
tests/: test_build_geo_call_part.py  test_build_profile.py  test_edition.py  test_geography.py  test_variable_consolodation.py  test_variable_declaration.py
