[tool.poetry]
name = "d3census"
version = "1.1.1"
description = "A python library for interacting with the Census API -- similar to tidycensus."
authors = ["mikevatd3 <mikevatd3@github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
pandas = "^2.2.3"
tomli = "^2.1.0"
aiohttp = "^3.11.7"
returns = "^0.23.0"
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
