[project]
name = "d3census"
version = "1.3.0"
description = "A python library for interacting with the Census API -- similar to tidycensus."
authors = [{ name = "mikevatd3", email = "mikevatd3@github.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "tomli>=2.1.0",
    "aiohttp>=3.11.7",
    "returns>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
